refactor(tests): Testing exceptions with only one possible invocation throwing
Refactor tests that check for exceptions to have only a single call in the calling code that could throw a RuntimeException.

Refactor to use `assertThatThrownBy()`` for checking code for exceptions thrown.

related to #88, #27